--- a/placas/placas.css
+++ b/placas/placas.css
@@ -83,10 +83,15 @@ body{
 .areaResultado{
     display: flex;
     flex:1;
-    flex-direction: row;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    font-size: 20px;
     background-color: #ad67464f;
+}
+.resultado{
+    display: flex;
+    flex-direction: row;
+    font-size: 20px;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    margin-top: 12px;
 }
