--- a/placas/placas.css
+++ b/placas/placas.css
@@ -46,13 +46,6 @@ body{
     font-size: 20px;
     color:rgb(85, 83, 83);
 }
-.boton{
-    margin-top: 12px;
-    display: flex;
-    flex: 1;
-    align-items: center;
-    margin-bottom: 10px;
-}
 .estiloBoton{
     background-color: #ad613e;
     color: rgb(255, 255, 255);
@@ -94,4 +87,16 @@ body{
     font-size: 20px;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     margin-top: 12px;
+}
+.botones{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    margin-top: 20px;
+}
+.contenedorBoton{
+    display: flex;
+    flex:1;
+    justify-content: center;
+    margin-left: 10px;
 }
