--- a/roles/roles.css
+++ b/roles/roles.css
@@ -78,28 +78,7 @@ body{
     align-items: center;
     justify-content: center;
 }
-tbody tr:nth-child(odd) {
-    background-color: #908efc;
-  }
-  
-  tbody tr:nth-child(even) {
-    background-color: #6a51cf;
-  }
-  
-  tbody tr {
-    background-image: url(noise.png);
-  }
-  
-  table {
-    background-color: #0b0c0c;
-    width: 100%;
-  }
-  td{
-    text-align: center;
-  }
-  .areaTabla{
-    margin-top: 20px;
-  }
+
 .estiloBoton:hover {
     background-color:white; 
     color: #217023;
@@ -185,4 +164,39 @@ tbody tr:nth-child(odd) {
     color:red;
     font-style: italic;
     font-size: 14px;
+}
+#contenidoTabla{
+    border-radius: 5px 5px 0 0;
+    border-collapse:collapse;
+    font-size: 14px;
+    font-family:  Arial, Helvetica, sans-serif;
+    min-width: 450px;
+    overflow: hidden;
+    box-shadow: 0 0 10px rgba(0, 0, 0.3, 0.25);
+
+}
+.areaTabla{
+    margin-top: 20px;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+  }
+#contenidoTabla th {
+    background-color: #217023;
+    color: #ffffff;
+    text-align:left;
+    font-weight: bold;
+    padding: 12px 15px;
+}
+#contenidoTabla td{
+    padding: 12px 15px;
+}
+#contenidoTabla tbody tr{
+    border-bottom: 1px solid #cacaca;
+}
+#contenidoTabla tbody tr:nth-of-type(odd) {
+    background-color: #eceaea;
+}
+#contenidoTabla tbody tr:last-of-type{
+    border-bottom: 2px solid #217023;
 }
