--- a/Andrea Castro/orden.css
+++ b/Andrea Castro/orden.css
@@ -129,3 +129,40 @@ body{
     font-style: italic;
     font-size: 16px;
 }
+#contenidoTabla{
+    border-radius: 5px 5px 0 0;
+    border-collapse:collapse;
+    font-size: 14px;
+    font-family:  Arial, Helvetica, sans-serif;
+    min-width: 300px;
+    overflow: hidden;
+    box-shadow: 0 0 10px rgba(0, 0, 0.3, 0.25);
+
+}
+.areaTabla{
+    margin-top: 20px;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+  }
+#contenidoTabla th {
+    background-color: #3b7992;
+    color: #ffffff;
+    text-align:left;
+    font-weight: bold;
+    padding: 12px 15px;
+    border: #cacaca 1px solid ;
+}
+#contenidoTabla td{
+    padding: 12px 15px;
+    border: #cacaca 1px solid ;
+}
+#contenidoTabla tbody tr{
+    border-bottom: 1px solid #cacaca;
+}
+#contenidoTabla tbody tr:nth-of-type(odd) {
+    background-color: #eceaea;
+}
+#contenidoTabla tbody tr:last-of-type{
+    border-bottom: 2px solid #3b7992;
+}
